syntax = "proto3";
option go_package = "github.com/mtharmer/rpc-go/rpcgo";

package rpcgo;

service DoStuff {
	rpc PrintHello (HelloRequest) returns (HelloReply) {};
  rpc ProcessPerson (PersonRequest) returns (PersonReply) {};
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}

message PersonRequest {
  string name = 1;
  int32 age = 2;
  string city = 3;
}

message PersonReply {
  string message = 1;
  int32 status = 2;
}
